layout issues fixed

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ html,body{
     left:0;
     background-color: white;
     z-index: 5;
+    /* display: none; */
 }
 
 .site-header .site-logo-block{
@@ -141,6 +142,7 @@ html,body{
     transition: all .3s ease-in-out;
     z-index: 20;
     opacity: 0;
+    transform: translateY(-200%);
 }
 
 .ctas-menu li{
@@ -216,6 +218,7 @@ html,body{
     /* transform : translateX(120%); */
     transition: all .3s ease-in-out;
     z-index: 10;
+    transform: translateY(-200%);
     /* background-color: red; */
 }
 
@@ -248,7 +251,7 @@ html,body{
 /* *********************** MAIN SECTION **************************** */
 
 .main-block{
-    padding-top: 12vh;
+    margin-top: 6%;
     width: 100%;
     height: 100vh;
     background-color: #198754;
@@ -279,9 +282,10 @@ html,body{
 
 .main-block .hero-info{
     position: absolute;
+    /* margin-top: 6%; */
     width: 90%;
-    height: 90%;
-    transform: translate(-50%,-45%);
+    height: 70%;
+    transform: translate(-50%,-50%);
     top:50%;
     left: 50%;
     /* border: 1px solid white; */
@@ -289,30 +293,32 @@ html,body{
     color: white;
     display: flex;
     flex-direction: column;
-    padding-top: 2rem;
+    /* padding-top: 2rem; */
+    /* background-color: blue; */
     /* background-color: blue; */
 }
 
 .hero-info .hero-info-name-block{
     width: 100%;
-    height: 30%;
+    height: 40%;
     /* background-color: #fd7e14; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 2rem;
+    /* background-color: red; */
         /* background-color: yellow; */
 
 }
 
 .hero-info .hero-info-name-block h1{
-    margin-bottom: 1.5rem;
-    color: red;
+    margin-bottom: 1rem;
+    color: blue;
 }
 
 .hero-info .hero-info-name-block h4{
-    margin: .5rem;
+    margin-bottom: .5rem;
 }
 
 .hero-info .hero-info-name-block button{
@@ -320,7 +326,7 @@ html,body{
     background-color: none;
     border: 1px solid white;
     border-radius: 10px;
-    margin-top: 2rem;
+    margin-top: 1rem;
     background-color: transparent;
     color: white;
     font-weight: bolder;
@@ -329,22 +335,25 @@ html,body{
 
 .hero-info .hero-info-address-block{
     width: 100%;
-    height: 70%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     /* padding: 2rem 0; */
     font-size: .8rem;
+    /* border: 1px solid white; */
+    border-radius: 10px;
     /* background-color: red; */
 }
 
 .hero-info-address-block .address-item{
     display: flex;
-    border-bottom: 1px solid white;
+    /* border-bottom: 1px solid white; */
     width: 100%;
-    height: 30%;
-    padding: 0 2rem;
+    height: 50%;
+    padding: 2.5rem;
+    /* background-color: red; */
 }
 
 .hero-info-address-block .address-item .hero-info-number{
@@ -530,6 +539,7 @@ html,body{
     .cta-block .ctas-menu{
         width: 150%;
         right: 55%;
+        padding: 0 2rem
     }
    .cta-block .ctas-menu li a{
     /* background-color: green; */
@@ -544,7 +554,7 @@ html,body{
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
    }
 
    .cta-block .ctas-menu li a p{
@@ -552,6 +562,7 @@ html,body{
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
+    font-size: .8rem;
    }
 
     .menu-block .main-menu{
